proseguito prima sezione main (principalmente caratterizzando stili via css) e validato

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <li><a href="">Docs</a></li>
                             <li><a href="" class="dropdown">Support</a></li>
                             <li><a href="">Login</a></li>
-                            <li><a href="" class="">Sign Up</a></li>
+                            <li><a href="" class="btn btn-default">Sign Up</a></li>
                         </ul>
                     </div>
                     <div class="visible-xs visible-sm col-xs-6 text-right">
@@ -73,10 +73,10 @@
                                     <input type="password" class="form-control" placeholder="Password">
                                 </div>
                             </form>
-                            <a href="" class="btn btn-default btn-block">bottone</a>
+                            <a href="" class="btn btn-block blue-button">Create your account</a>
                             <div class="button-wrapper">
-                                <a href="" class="btn btn-default btn-block"><img src="img/google-icon.png" alt=""
-                                        class="left-button"> bottone</a>
+                                <a href="" class="btn btn-block white-button"><img src="img/google-icon.png" alt=""
+                                        class="left-button"> Sign up with google</a>
                             </div>
                             <p>By signing up you agree to the <a href="">Terms of Service</a>.</p>
                         </div>
