--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <li><a href="" class="dropdown">Products</a></li>
                             <li><a href="">Customers</a></li>
                             <li><a href="" class="dropdown">Community
-                            </a></li>
+                                </a></li>
                             <li><a href="">Pricing</a></li>
                         </ul>
                     </div>
@@ -37,7 +37,7 @@
                             <li><a href="">Docs</a></li>
                             <li><a href="" class="dropdown">Support</a></li>
                             <li><a href="">Login</a></li>
-                            <li><a href="" class="btn btn-default">Sign Up</a></li>
+                            <li><a href="" class="">Sign Up</a></li>
                         </ul>
                     </div>
                     <div class="visible-xs visible-sm col-xs-6 text-right">
@@ -87,77 +87,146 @@
 
         </section>
 
-        <section class="bg-grey text-center">
-            <h3>blabla</h3>
+        <section class="customers tb-padder bg-grey text-center">
+            <h3>Innovative business trust DigitalOcean</h3>
             <div class="container">
                 <ul class="logo-list">
-                    <li><img src="img/docker.svg" alt=""></li>
-                    <li><img src="img/gitlab.svg" alt=""></li>
-                    <li><img src="img/slack.svg" alt=""></li>
-                    <li><img src="img/hashicorp.svg" alt=""></li>
-                    <li><img src="img/hashicorp.svg" alt=""></li>
-                    <li><img src="img/splunk.svg" alt=""></li>
+                    <li><img src="img/docker.svg" alt="" class="img-responsive"></li>
+                    <li><img src="img/gitlab.svg" alt="" class="img-responsive"></li>
+                    <li><img src="img/slack.svg" alt="" class="img-responsive"></li>
+                    <li><img src="img/hashicorp.svg" alt="" class="img-responsive"></li>
+                    <li><img src="img/hashicorp.svg" alt="" class="img-responsive"></li>
+                    <li><img src="img/splunk.svg" alt="" class="img-responsive"></li>
                 </ul>
             </div>
-            <p><a href="">View customer stories</a></p>
+            <p><a href="" class="chevroned_link">View customer stories</a></p>
         </section>
-        <section class="deploy">
+        <section class="deploy tb-padder">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-4">
                         <ul class="deploy-steps">
-                            <li>testo</li>
-                            <li>testo</li>
-                            <li>testo</li>
-                            <li>testo</li>
-                            <li>testo</li>
+                            <li>Deploy</li>
+                            <li>Manage</li>
+                            <li>Secure</li>
+                            <li>Scale</li>
+                            <li>Monitor</li>
                         </ul>
                     </div>
                     <div class="col-xs-12 col-sm-8">
-                        <div class="col-xs-12 col-sm-6">
-                            <div class="step">
-                                <img src="img/one-click.svg" alt="" class="icon">
-                                <h4>
-                                    prova
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique libero pariatur
-                                    tempora maxime doloribus numquam inventore </p>
+                        <div class="row">
+                                <div class="col-xs-12 col-sm-6">
+                                    <div class="step">
+                                        <img src="img/one-click.svg" alt="" class="icon">
+                                        <h4>
+                                            Cluster deployments
+                                        </h4>
+                                        <p>Provision multiple Droplets (virtual machines) in seconds with our control
+                                            panel, CLI, or directly against our API. </p>
+                                    </div>
+                                </div>
+
+                                <div class="col-xs-12 col-sm-6">
+                                    <div class="step">
+                                        <img src="img/one-click.svg" alt="" class="icon">
+                                        <h4>Optimized compute types</h4>
+                                        <p>Get the compute resources you need with Standard or Optimized Droplets.</p>
+                                    </div>
+                                </div>
                             </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-6">
+                                    <div class="step">
+                                        <img src="img/one-click.svg" alt="folder icon" class="icon">
+                                        <h4>One-click apps</h4>
+                                        <p>Skip the installation and configuration process with pre-built open source
+                                            images supporting Rails, Cassandra, Docker, and more.</p>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-6">
+                                    <div class="step">
+                                        <img src="img/one-click.svg" alt="" class="icon">
+                                        <h4>Global availability</h4>
+                                        <p>Deploy to any of our data center regions around the world. </p>
+                                    </div>
+                                </div>
+
+                            </div>
+                               
+
+
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <section class="slide-show designed bg-grey text-center tb-padder">
+            <h2>Designed for developers</h2>
+            <p>Build more and spend less time managing your infrastructure with our easy-to-use control panel and API
+            </p>
+            <!-- insert Cols -->
+            <div class="dot-list"><span class="dot"></span><span class="dot"></span><span class="dot"></span><span
+                    class="dot"></span></div>
+
+
+        </section>
+
+        <section class="features tb-padder">
+            <div class="container">
+                <div class="row">
+                    <h2 class="text-center">The features your business needs</h2>
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="step">
+                            <img src="img/pred-pricing.svg" alt="sheet icon" class="icon">
+                            <h4>
+                                Predictable pricing
+                            </h4>
+                            <p>Leacve complex pricing structures behind. Always know what you'll pay month with a flat, industry-leading pricing structure.</p>
+                            <a href="" class="chevroned_link">Pricing</a>
                         </div>
-                        <div class="col-xs-12 col-sm-6">
-                            <div class="step">
-                                <img src="img/one-click.svg" alt="" class="icon">
-                                <h4>
-                                    prova
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique libero pariatur
-                                    tempora maxime doloribus numquam inventore </p>
-                            </div>
+                    </div> <div class="col-xs-12 col-sm-4">
+                        <div class="step">
+                            <img src="img/world-class.svg" alt="headphones icon" class="icon">
+                            <h4>
+                                World-class service
+                            </h4>
+                            <p>Free round-the-clock technical support for all customers. You'll feel the love.</p>
+                            <a href="" class="chevroned_link">Support</a>
                         </div>
-                        <div class="col-xs-12 col-sm-6">
-                            <div class="step">
-                                <img src="img/one-click.svg" alt="" class="icon">
-                                <h4>
-                                    prova
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique libero pariatur
-                                    tempora maxime doloribus numquam inventore </p>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-6">
-                            <div class="step">
-                                <img src="img/one-click.svg" alt="" class="icon">
-                                <h4>
-                                    prova
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique libero pariatur
-                                    tempora maxime doloribus numquam inventore </p>
-                            </div>
+                    </div> <div class="col-xs-12 col-sm-4">
+                        <div class="step">
+                            <img src="img/reliable-platform.svg" alt="shield icon" class="icon">
+                            <h4>
+                                Reliable platform
+                            </h4>
+                            <p>More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
+                            <a href="" class="chevroned_link">Security</a>
                         </div>
                     </div>
                 </div>
             </div>
 
+        </section>
+<!-- ZONA TEST -->
+        <section class="test">
+            <i class="fas fa-chevron-right"></i>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur vitae, maxime quis dolorum id rem blanditiis rerum veritatis sed provident asperiores suscipit impedit, a nobis ipsam architecto ipsa assumenda vero!
+                    Illo commodi quaerat et, explicabo porro, inventore fugiat modi ipsa tempore ducimus in. Labore, temporibus, earum debitis neque maiores delectus sapiente, eius pariatur iure laudantium nihil ad totam dignissimos accusantium!
+                    Molestias sunt aut maiores, perspiciatis ut libero praesentium totam aliquam doloribus quam repudiandae officiis, dolorum atque voluptatem placeat? Voluptas magnam dolorem harum sit eos! Dolorem soluta nostrum delectus enim magni?
+                    Voluptate, doloribus quisquam tenetur deleniti quae asperiores eius aspernatur dicta enim voluptatibus, molestiae veritatis. Ullam voluptatibus consectetur mollitia amet iste in molestias ut ratione nulla aperiam, inventore totam nobis temporibus.
+                    Perspiciatis quibusdam molestiae quisquam magnam. Sapiente autem id mollitia esse. Repellendus, dicta! Aut a voluptates asperiores inventore voluptas nam porro ipsa recusandae. Eum deserunt molestiae quidem aspernatur repudiandae beatae esse.</div>
+                    <div class="col-xs-6">lorem</div>
+                    <div class="col-xs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique laboriosam dolorem laudantium doloremque veritatis ducimus fugiat maiores libero repudiandae vel dolore, labore incidunt aperiam nobis sit alias quos consequuntur non.
+                    Voluptates quidem eos deleniti quam expedita vitae officia nesciunt saepe neque maiores. Minus porro accusantium facere quisquam debitis, voluptate obcaecati, iusto repellendus illum modi voluptates. Quod neque eligendi quibusdam magnam!</div>
+                    <div class="col-xs-6"></div>
+                    <div class="col-xs-6"></div>
+                    <div class="col-xs-6"></div>
+                    <div class="col-xs-6"></div>
+                    <div class="col-xs-6"></div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
