aggiunti commenti in html sino a sezione .deploy

--- a/index.html
+++ b/index.html
@@ -12,16 +12,23 @@
 </head>
 
 <body>
+
+    <!-- HEADER -->
     <header>
+        <!-- HEADER>Navbar-->
         <nav>
             <div class="container">
                 <div class="row">
+                    <!-- HEADER>Navbar>logo_col -->
                     <div class="col-xs-6 col-md-3">
                         <div class="nav_header">
                             <a href=""> <img src="img/logo-small.svg" alt=""> DigitalOcean
                             </a>
                         </div>
                     </div>
+                    <!-- END HEADER>Navbar>logo_col -->
+
+                    <!-- HEADER>Navbar>middle_col -->
                     <div class="visible-md visible-lg col-md-5">
                         <ul>
                             <li><a href="" class="dropdown">Products</a></li>
@@ -31,6 +38,9 @@
                             <li><a href="">Pricing</a></li>
                         </ul>
                     </div>
+                    <!-- END HEADER>Navbar>middle_col -->
+
+                    <!-- HEADER>Navbar>right_col-->
                     <div class="visible-md visible-lg col-md-4 text-right">
                         <ul>
                             <li><a href="">Docs</a></li>
@@ -39,17 +49,28 @@
                             <li><a href="" class="">Sign Up</a></li>
                         </ul>
                     </div>
+                    <!-- END HEADER>Navbar>right_col-->
+
+                    <!-- HEADER>Navbar>burger_col-->
                     <div class="visible-xs visible-sm col-xs-6 text-right">
                         <a href="" class="burger"><i class="fas fa-bars"></i></a>
                     </div>
+                    <!-- END HEADER>Navbar>burger_col-->
                 </div>
             </div>
         </nav>
+        <!-- END HEADER>Navbar -->
     </header>
+    <!-- END HEADER -->
+
+    <!-- MAIN -->
     <main>
+        <!-- MAIN>Intro -->
         <section class="intro tb-padder">
             <div class="container">
                 <div class="row">
+
+                    <!-- MAIN>Intro>banner_col -->
                     <div class="col-sm-6">
                         <div class="banner">
                             <h1>The simplest cloud platform for developers & teams</h1>
@@ -58,13 +79,19 @@
                                 one virtual machine or ten thousand.</p>
                         </div>
                     </div>
+                    <!-- END MAIN>Intro>banner_col -->
+
+                    <!-- MAIN>Intro>log-box_col -->
                     <div class="col-sm-6">
                         <div class="log-box text-center">
                             <h2>Deploy your app in seconds. <br />
                                 <!--qua magari poi do display block al link !-->
                                 <a href="">Get started now.</a>
                             </h2>
+
+                            <!-- MAIN>Intro>log-box_col>login_stuff -->
                             <form class="login-form">
+                                <!-- Da fare piu accessibile (poi) -->
                                 <div class="form-group">
                                     <input type="email" class="form-control" placeholder="Email">
                                 </div>
@@ -76,15 +103,19 @@
                             <div class="button-wrapper">
                                 <a href="" class="btn btn-block white-button"><img src="img/google-icon.png" alt="" class="left-button"> Sign up with google</a>
                             </div>
+                            <!-- END MAIN>Intro>log-box_col>login_stuff -->
+
                             <p>By signing up you agree to the <a href="">Terms of Service</a>.</p>
                         </div>
                     </div>
+                    <!-- END MAIN>Intro>log-box_col -->
 
                 </div>
             </div>
-
         </section>
+        <!-- END MAIN>Intro -->
 
+        <!-- MAIN>customers -->
         <section class="customers tb-padder bg-grey text-center">
             <h3>Innovative business trust DigitalOcean</h3>
             <div class="container">
@@ -99,16 +130,22 @@
             </div>
             <p><a href="" class="chevroned_link">View customer stories</a></p>
         </section>
+        <!-- END MAIN>customers -->
+
+        <!-- MAIN>deploy -->
         <section class="deploy tb-padder">
             <div class="container">
+                <!-- MAIN>deploy>section_header -->
                 <div class="section-header text-center">
                     <h2>Deploy and scale seamlessly</h2>
                     <p>Our optimized configuration process saves your team time when running and scaling distributed
                         applications, AI & machine learning workloads, hosted services, client websites, or CI/CD
                         environments.</p>
                 </div>
+                <!-- END MAIN>deploy>section_header -->
 
                 <div class="row thinner_cont">
+                    <!-- MAIN>deploy>steps-list_col -->
                     <div class="col-xs-12 col-sm-4">
                         <ul class="deploy-steps">
                             <li>Deploy</li>
@@ -118,6 +155,9 @@
                             <li>Monitor</li>
                         </ul>
                     </div>
+                    <!-- END  MAIN>deploy>steps-list_col -->
+
+                    <!-- MAIN>deploy>steps-description_col -->
                     <div class="col-xs-12 col-sm-8">
                         <div class="row">
                             <div class="col-xs-12 col-sm-6">
@@ -161,10 +201,13 @@
 
 
                     </div>
+                    <!-- END MAIN>deploy>steps-description_col -->
+
                 </div>
             </div>
-
         </section>
+        <!-- END MAIN>deploy -->
+
         <section class="slide-show designed bg-grey text-center tb-padder">
             <div class="container">
                 <h2>Designed for developers</h2>
@@ -324,7 +367,8 @@
                         <div class="log-box">
                             <img src="img/rockerbox-logo.png" alt="">
                             <figure>
-                                <p>"We have been able to make scaling the technical infrastructure of our business cost effective and efficient."</p>
+                                <p>"We have been able to make scaling the technical infrastructure of our business cost
+                                    effective and efficient."</p>
                                 <figcaption>
                                     <cite>Rick O'Toole <br />
                                         Co-founder and CTO
