aggiunta bg img a .intro, cambiato colore h2 in .bg-blue sections, spostato di posizione qualche elemento nel css

--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@
         </section>
         <!-- END MAIN>deploy -->
 
+
+        <!-- MAIN>designed -->
         <section class="slide-show designed bg-grey text-center tb-padder">
             <div class="container">
                 <h2>Designed for developers</h2>
@@ -217,20 +219,22 @@
                 <!-- insert Cols -->
                 <div class="row">
                     <div class="col-xs-3">
-                        <div class='text-right test'>test</div>
+                        <div class='text-right test'><span class="test">*test*</span></div>
                     </div>
                     <div class="col-xs-6">
                         <div class="slide"><img src="img/slide.jpg" alt="" class="img-responsive">
                         </div>
                     </div>
-                    <div class="col-xs-3">test</div>
+                    <div class="col-xs-3 text-left"><span class="test">*test*</span></div>
                 </div>
                 <div class="dot-list"><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
             </div>
 
 
         </section>
+        <!-- END MAIN>designed -->
 
+        <!-- MAIN>features -->
         <section class="features tb-padder">
             <div class="container">
                 <div class="row">
@@ -271,7 +275,9 @@
             </div>
 
         </section>
+        <!-- END MAIN>features -->
 
+        <!-- MAIN>regions -->
         <section class="regions bg-blue tb-padder">
             <div class="container">
                 <h2>Service your customers arond the world from 12 regions.</h2>
@@ -356,6 +362,9 @@
             </div>
 
         </section>
+        <!-- END MAIN>regions -->
+
+        <!-- MAIN>feedbacks -->
         <section class="slide-show feedbacks bg-grey text-center tb-padder">
             <div class="container">
                 <h2 class="section-header">Developement teams love DigitalOcean</h2>
@@ -380,24 +389,21 @@
                         </div>
                     </div>
                     <div class="col-xs-3"></div>
-
                 </div>
-
                 <div class="dot-list"><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
-
             </div>
-
-
         </section>
+        <!-- END MAIN>Feedbacks -->
+
+        <!-- MAIN>aggressive-marketing -->
         <section class="aggressive-marketing bg-blue tb-padder text-center">
             <h2>Get started now.</h2>
             <a href="" class="btn lg-btn">Create your account</a>
-
-
         </section>
-        <!-- ZONA TEST -->
+        <!-- END MAIN>aggressive-marketing -->
 
     </main>
+    <!-- END MAIN -->
 
     <!-- FOOTER -->
     <footer class="tb-padder">
@@ -474,13 +480,13 @@
                                 <li><a href="">Network Status</a></li>
                             </ul>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
     </footer>
     <!-- END FOOTER -->
+
 </body>
 
 </html>
