--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                     <!-- HEADER>Navbar>middle_col -->
                     <div class="visible-md visible-lg col-md-5">
-                        <ul>
+                        <ul class="list-inline">
                             <li><a href="" class="dropdown">Products</a></li>
                             <li><a href="">Customers</a></li>
                             <li><a href="" class="dropdown">Community
@@ -42,7 +42,7 @@
 
                     <!-- HEADER>Navbar>right_col-->
                     <div class="visible-md visible-lg col-md-4 text-right">
-                        <ul>
+                        <ul class="list-inline">
                             <li><a href="">Docs</a></li>
                             <li><a href="" class="dropdown">Support</a></li>
                             <li><a href="">Login</a></li>
