inserite chevron a fianco di slide, completata sezione .regions, cambiato qualche font-color

--- a/index.html
+++ b/index.html
@@ -219,13 +219,19 @@
                 <!-- insert Cols -->
                 <div class="row">
                     <div class="col-xs-3">
-                        <div class='text-right test'><span class="test">*test*</span></div>
+                        <div class='slide-arrow text-right'><span><a href=""><i class="fas fa-chevron-left"></i></a></span></div>
                     </div>
                     <div class="col-xs-6">
                         <div class="slide"><img src="img/slide.jpg" alt="" class="img-responsive">
                         </div>
                     </div>
-                    <div class="col-xs-3 text-left"><span class="test">*test*</span></div>
+                    <div class="col-xs-3">
+                        <div class="slide-arrow text-left">
+                            <a href="">
+                                <i class="fas fa-chevron-right"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="dot-list"><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
             </div>
@@ -296,26 +302,26 @@
 
                         </div>
                         <div class="row">
-                            <div class="col-xs-2 text-uppercase">AMS2</div>
-                            <div class="col-xs-7">loco</div>
+                            <div class="col-xs-2 text-uppercase">BLR1</div>
+                            <div class="col-xs-7">Bangalore, India</div>
                             <div class="col-xs-3 text-right"><a href="" class="chevroned_link">Test speed</a></div>
 
                         </div>
                         <div class="row">
-                            <div class="col-xs-2 text-uppercase">AMS2</div>
-                            <div class="col-xs-7">loco</div>
+                            <div class="col-xs-2 text-uppercase">FRA1</div>
+                            <div class="col-xs-7">Frankfurt, German</div>
                             <div class="col-xs-3 text-right"><a href="" class="chevroned_link">Test speed</a></div>
 
                         </div>
                         <div class="row">
-                            <div class="col-xs-2 text-uppercase">AMS2</div>
-                            <div class="col-xs-7">loco</div>
+                            <div class="col-xs-2 text-uppercase">LON1</div>
+                            <div class="col-xs-7">London, UK</div>
                             <div class="col-xs-3 text-right"><a href="" class="chevroned_link">Test speed</a></div>
 
                         </div>
                         <div class="row">
-                            <div class="col-xs-2 text-uppercase">AMS2</div>
-                            <div class="col-xs-7">loco</div>
+                            <div class="col-xs-2 text-uppercase">NYC1</div>
+                            <div class="col-xs-7">New York, USA</div>
                             <div class="col-xs-3 text-right"><a href="" class="chevroned_link">Test speed</a></div>
 
                         </div>
@@ -323,41 +329,42 @@
                     <div class="col-xs-12 col-md-6">
                         <div class="row">
                             <div class="col-xs-2 text-uppercase">AMS2</div>
-                            <div class="col-xs-7">loco</div>
+                            <div class="col-xs-7">Amsterdam, Netherlands</div>
                             <div class="col-xs-3 text-right"><a href="" class="chevroned_link">Test speed</a></div>
 
                         </div>
                         <div class="row">
-                            <div class="col-xs-2 text-uppercase">AMS2</div>
-                            <div class="col-xs-7">loco</div>
+                            <div class="col-xs-2 text-uppercase">AMS3</div>
+                            <div class="col-xs-7">Amsterdam, Netherlands</div>
                             <div class="col-xs-3 text-right"><a href="" class="chevroned_link">Test speed</a></div>
 
                         </div>
                         <div class="row">
-                            <div class="col-xs-2 text-uppercase">AMS2</div>
-                            <div class="col-xs-7">loco</div>
+                            <div class="col-xs-2 text-uppercase">BLR1</div>
+                            <div class="col-xs-7">Bangalore, India</div>
                             <div class="col-xs-3 text-right"><a href="" class="chevroned_link">Test speed</a></div>
 
                         </div>
                         <div class="row">
-                            <div class="col-xs-2 text-uppercase">AMS2</div>
-                            <div class="col-xs-7">loco</div>
+                            <div class="col-xs-2 text-uppercase">FRA1</div>
+                            <div class="col-xs-7">Frankfurt, German</div>
                             <div class="col-xs-3 text-right"><a href="" class="chevroned_link">Test speed</a></div>
 
                         </div>
                         <div class="row">
-                            <div class="col-xs-2 text-uppercase">AMS2</div>
-                            <div class="col-xs-7">loco</div>
+                            <div class="col-xs-2 text-uppercase">LON1</div>
+                            <div class="col-xs-7">London, UK</div>
                             <div class="col-xs-3 text-right"><a href="" class="chevroned_link">Test speed</a></div>
 
                         </div>
                         <div class="row">
-                            <div class="col-xs-2 text-uppercase">AMS2</div>
-                            <div class="col-xs-7">loco</div>
+                            <div class="col-xs-2 text-uppercase">NYC1</div>
+                            <div class="col-xs-7">New York, USA</div>
                             <div class="col-xs-3 text-right"><a href="" class="chevroned_link">Test speed</a></div>
 
                         </div>
                     </div>
+
                 </div>
             </div>
 
@@ -371,7 +378,9 @@
                 <!-- insert Cols -->
                 <div class="row">
                     <!-- TEST -->
-                    <div class="col-xs-3"></div>
+                    <div class="col-xs-3">
+                        <div class='slide-arrow text-right'><span><a href=""><i class="fas fa-chevron-left"></i></a></span></div>
+                    </div>
                     <div class="col-xs-6">
                         <div class="log-box">
                             <img src="img/rockerbox-logo.png" alt="">
@@ -388,7 +397,9 @@
                             <a href="" class="chevroned_link">Read story</a>
                         </div>
                     </div>
-                    <div class="col-xs-3"></div>
+                    <div class="col-xs-3">
+                        <div class='slide-arrow text-left'><span><a href=""><i class="fas fa-chevron-right"></i></a></span></div>
+                    </div>
                 </div>
                 <div class="dot-list"><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
             </div>
@@ -413,7 +424,7 @@
                     <img src="img/logo-small.svg" alt="">
                     <!-- qua posso usare cite per copyright? o address? -->
                     <p class="copyright">2018 DigitalOcean, LLC. All rights reserved.</p>
-                    <p>Proudly made in NY</p>
+                    <p class="lighter">Proudly made in NY</p>
                     <ul class="list-inline">
                         <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
                         <li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
