--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <title>DigitalOcean</title>
 </head>
 
 <body>
@@ -93,10 +95,12 @@
                             <form class="login-form">
                                 <!-- Da fare piu accessibile (poi) -->
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Email">
+                                    <label for="email" class="sr-only">EMAIL</label>
+                                    <input type="email" name="email" id="email" class="form-control" placeholder="Email">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control" placeholder="Password">
+                                    <label for="password" class="sr-only">PASSWORD</label>
+                                    <input type="password" name="password" id="password" class="form-control" placeholder="Password">
                                 </div>
                             </form>
                             <a href="" class="btn btn-block blue-button">Create your account</a>
@@ -119,7 +123,7 @@
         <section class="customers tb-padder bg-grey text-center">
             <h3>Innovative business trust DigitalOcean</h3>
             <div class="container">
-                <ul class="logo-list">
+                <ul class="list-inline logo-list">
                     <li><img src="img/docker.svg" alt="docker icon" class="img-responsive"></li>
                     <li><img src="img/gitlab.svg" alt="gitlab icon" class="img-responsive"></li>
                     <li><img src="img/slack.svg" alt="slack icon" class="img-responsive"></li>
