abbozzato squalo fixed

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 </head>
 
 <body>
+    <div class="pesky-shark">
+        <div class="question">Can I answer any question you have about DigitalOcean?
+            <div class="triangle"></div>
+        </div>
+        <div class="mascotte"><img src="img/shark.png" alt="">
+            <div class="notifs">
+                <span>2</span>
+            </div>
+        </div>
+    </div>
 
     <!-- HEADER -->
     <header>
@@ -48,7 +58,7 @@
                             <li><a href="">Docs</a></li>
                             <li><a href="" class="dropdown">Support</a></li>
                             <li><a href="">Login</a></li>
-                            <li><a href="" class="">Sign Up</a></li>
+                            <li><a href="" class="custom-button">Sign Up</a></li>
                         </ul>
                     </div>
                     <!-- END HEADER>Navbar>right_col-->
@@ -501,6 +511,8 @@
         </div>
     </footer>
     <!-- END FOOTER -->
+    <!-- FIXED -->
+
 
 </body>
 
