semplificato layout delle slide (da terminare): rimosse colonne, solo div inline-block

--- a/index.html
+++ b/index.html
@@ -224,30 +224,27 @@
 
 
         <!-- MAIN>designed -->
-        <section class="slide-show designed bg-grey text-center tb-padder">
+        <section class="slide_show designed bg-grey text-center tb-padder">
             <div class="container">
+                <!-- <div class="row"> -->
                 <h2>Designed for developers</h2>
-                <p>Build more and spend less time managing your infrastructure with our easy-to-use control panel and
+                <p>Build more and spend less time managing your infrastructure with our easy-to-use control panel
+                    and
                     API
                 </p>
-                <!-- insert Cols -->
-                <div class="row">
-                    <div class="col-xs-3">
-                        <div class='slide-arrow text-right'><span><a href=""><i class="fas fa-chevron-left"></i></a></span></div>
+                <div class="slider">
+                    <div class='slide-arrow text-right'><span><a href=""><i class="fas fa-chevron-left"></i></a></span>
                     </div>
-                    <div class="col-xs-6">
-                        <div class="slide"><img src="img/slide.jpg" alt="" class="img-responsive">
-                        </div>
+                    <div class="slide-content"><img src="img/slide.jpg" alt="" class="img-responsive">
                     </div>
-                    <div class="col-xs-3">
-                        <div class="slide-arrow text-left">
-                            <a href="">
-                                <i class="fas fa-chevron-right"></i>
-                            </a>
-                        </div>
+                    <div class="slide-arrow text-left">
+                        <a href="">
+                            <i class="fas fa-chevron-right"></i>
+                        </a>
                     </div>
                 </div>
-                <div class="dot-list"><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
+                <div class="dot-list"><span class="dot dot-active"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
+                <!-- </div> -->
             </div>
 
 
@@ -386,36 +383,33 @@
         <!-- END MAIN>regions -->
 
         <!-- MAIN>feedbacks -->
-        <section class="slide-show feedbacks bg-grey text-center tb-padder">
+        <section class="slide_show feedbacks bg-grey text-center tb-padder">
             <div class="container">
-                <h2 class="section-header">Developement teams love DigitalOcean</h2>
-                <!-- insert Cols -->
                 <div class="row">
-                    <!-- TEST -->
-                    <div class="col-xs-3">
-                        <div class='slide-arrow text-right'><span><a href=""><i class="fas fa-chevron-left"></i></a></span></div>
-                    </div>
-                    <div class="col-xs-6">
-                        <div class="log-box">
-                            <img src="img/rockerbox-logo.png" alt="">
-                            <figure>
-                                <p>"We have been able to make scaling the technical infrastructure of our business cost
-                                    effective and efficient."</p>
-                                <figcaption>
-                                    <cite>Rick O'Toole <br />
-                                        Co-founder and CTO
-                                    </cite>
-                                </figcaption>
-                            </figure>
+                    <h2 class="section-header">Developement teams love DigitalOcean</h2>
 
-                            <a href="" class="chevroned_link">Read story</a>
-                        </div>
+                    <div class='slide-arrow text-right'>
+                        <a href=""><i class="fas fa-chevron-left"></i></a>
                     </div>
-                    <div class="col-xs-3">
-                        <div class='slide-arrow text-left'><span><a href=""><i class="fas fa-chevron-right"></i></a></span></div>
+                    <div class="slide-content log-box">
+                        <img src="img/rockerbox-logo.png" alt="">
+                        <figure>
+                            <p>"We have been able to make scaling the technical infrastructure of our business cost
+                                effective and efficient."</p>
+                            <figcaption>
+                                <cite>Rick O'Toole <br />
+                                    Co-founder and CTO
+                                </cite>
+                            </figcaption>
+                        </figure>
+
+                        <a href="" class="chevroned_link">Read story</a>
                     </div>
+                    <div class='slide-arrow text-left'><a href=""><i class="fas fa-chevron-right"></i></a>
+                    </div>
+                    <div class="dot-list"><span class="dot"></span><span class="dot  dot-active"></span><span class="dot"></span><span class="dot"></span></div>
                 </div>
-                <div class="dot-list"><span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
+
             </div>
         </section>
         <!-- END MAIN>Feedbacks -->
