nascosto .pesky-shark su xs in quanto troppo pesky, ridimensionato alcuni font-size e raggruppato proprieta' css comuni

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <div class="pesky-shark">
-        <div class="question">Can I answer any question you have about DigitalOcean?
+    <div class="pesky-shark hidden-xs">
+        <div class="question">Can I help answer any question you have about DigitalOcean?
             <div class="triangle"></div>
         </div>
         <div class="mascotte"><img src="img/shark.png" alt="">
@@ -226,20 +226,21 @@
         <!-- MAIN>designed -->
         <section class="slide_show designed bg-grey text-center tb-padder">
             <div class="container">
-                <!-- <div class="row"> -->
-                <h2>Designed for developers</h2>
-                <p>Build more and spend less time managing your infrastructure with our easy-to-use control panel
-                    and
-                    API
-                </p>
+                <div class="section-header">
+                    <h2>Designed for developers</h2>
+                    <p>
+                        Build more and spend less time managing your infrastructure with our easy-to-use control panel
+                        and API
+                    </p>
+                </div>
                 <div class="slider">
-                    <div class='slide-arrow text-right'><span><a href=""><i class="fas fa-chevron-left"></i></a></span>
+                    <div class='slide-arrow text-right hidden-xs'><span><a href=""><i class="fas fa-chevron-left"></i></a></span>
                     </div>
                     <div class="slide-content"><img src="img/slide.jpg" alt="" class="img-responsive">
                     </div>
                     <div class="slide-arrow text-left">
                         <a href="">
-                            <i class="fas fa-chevron-right"></i>
+                            <i class="fas fa-chevron-right hidden-xs"></i>
                         </a>
                     </div>
                 </div>
@@ -297,7 +298,7 @@
         <!-- MAIN>regions -->
         <section class="regions bg-blue tb-padder">
             <div class="container">
-                <h2>Service your customers arond the world from 12 regions.</h2>
+                <h2 class="text-center">Service your customers arond the world from 12 regions.</h2>
                 <div class="row">
                     <div class="col-xs-12 col-md-6">
                         <div class="row">
@@ -387,8 +388,7 @@
             <div class="container">
                 <div class="row">
                     <h2 class="section-header">Developement teams love DigitalOcean</h2>
-
-                    <div class='slide-arrow text-right'>
+                    <div class='slide-arrow text-right hidden-xs'>
                         <a href=""><i class="fas fa-chevron-left"></i></a>
                     </div>
                     <div class="slide-content log-box">
@@ -405,11 +405,10 @@
 
                         <a href="" class="chevroned_link">Read story</a>
                     </div>
-                    <div class='slide-arrow text-left'><a href=""><i class="fas fa-chevron-right"></i></a>
+                    <div class='slide-arrow text-left hidden-xs'><a href=""><i class="fas fa-chevron-right"></i></a>
                     </div>
                     <div class="dot-list"><span class="dot"></span><span class="dot  dot-active"></span><span class="dot"></span><span class="dot"></span></div>
                 </div>
-
             </div>
         </section>
         <!-- END MAIN>Feedbacks -->
